# cli-tracker

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/skills/wd/: SKILL.md
.claude/skills/wd-done/: SKILL.md
.claude/skills/wd-history/: SKILL.md
.claude/skills/wd-pause/: SKILL.md
.claude/skills/wd-start/: SKILL.md
.claude/skills/wd-stats/: SKILL.md
.claude/skills/wd-status/: SKILL.md
.claude/skills/wd-task/: SKILL.md
.claude/skills/wd-timer/: SKILL.md
workday/: __init__.py  cli.py  config.py  display.py  models.py  storage.py  telegram_bot.py  timer.py
